--- a/fpp/test.ipynb
+++ b/fpp/test.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:60c09598254ca470ca967a0e001d71d8c6f0410fc1e92f687546cc6b6c4fd4d4"
+  "signature": "sha256:0e5568bf2fb7ee38918b4aa361b84fe9533cab644c68cf4bbb6e23c418c03524"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -33,7 +33,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "PAPER1_TABLE.head(5)"
+      "PAPER1_TABLE"
      ],
      "language": "python",
      "metadata": {},
@@ -108,13 +108,292 @@
         "      <td> 169.303502</td>\n",
         "      <td> 0.0331</td>\n",
         "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201367065</th>\n",
+        "      <td>-1.454787</td>\n",
+        "      <td> 201367065</td>\n",
+        "      <td>  5.4186</td>\n",
+        "      <td> 10.0542</td>\n",
+        "      <td> 172.334949</td>\n",
+        "      <td> 0.0354</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201367065</th>\n",
+        "      <td>-1.454787</td>\n",
+        "      <td> 201367065</td>\n",
+        "      <td>  4.2769</td>\n",
+        "      <td> 24.6470</td>\n",
+        "      <td> 172.334949</td>\n",
+        "      <td> 0.0272</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201384232</th>\n",
+        "      <td>-1.198477</td>\n",
+        "      <td> 201384232</td>\n",
+        "      <td> 19.5035</td>\n",
+        "      <td> 30.9375</td>\n",
+        "      <td> 178.192260</td>\n",
+        "      <td> 0.0260</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201393098</th>\n",
+        "      <td>-1.065755</td>\n",
+        "      <td> 201393098</td>\n",
+        "      <td> 16.6212</td>\n",
+        "      <td> 28.6793</td>\n",
+        "      <td> 167.093771</td>\n",
+        "      <td> 0.0231</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201403446</th>\n",
+        "      <td>-0.907261</td>\n",
+        "      <td> 201403446</td>\n",
+        "      <td>  7.3437</td>\n",
+        "      <td> 19.1535</td>\n",
+        "      <td> 174.266344</td>\n",
+        "      <td> 0.0154</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201445392</th>\n",
+        "      <td>-0.284375</td>\n",
+        "      <td> 201445392</td>\n",
+        "      <td>  5.6110</td>\n",
+        "      <td> 10.3527</td>\n",
+        "      <td> 169.793665</td>\n",
+        "      <td> 0.0349</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201445392</th>\n",
+        "      <td>-0.284375</td>\n",
+        "      <td> 201445392</td>\n",
+        "      <td>  5.0690</td>\n",
+        "      <td>  5.0644</td>\n",
+        "      <td> 169.793665</td>\n",
+        "      <td> 0.0274</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201465501</th>\n",
+        "      <td> 0.005301</td>\n",
+        "      <td> 201465501</td>\n",
+        "      <td> 14.6719</td>\n",
+        "      <td> 18.4488</td>\n",
+        "      <td> 176.264468</td>\n",
+        "      <td> 0.0531</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201505350</th>\n",
+        "      <td> 0.603575</td>\n",
+        "      <td> 201505350</td>\n",
+        "      <td>  9.2764</td>\n",
+        "      <td> 11.9069</td>\n",
+        "      <td> 174.960319</td>\n",
+        "      <td> 0.0446</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201505350</th>\n",
+        "      <td> 0.603575</td>\n",
+        "      <td> 201505350</td>\n",
+        "      <td>  5.3840</td>\n",
+        "      <td>  7.9193</td>\n",
+        "      <td> 174.960319</td>\n",
+        "      <td> 0.0747</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201546283</th>\n",
+        "      <td> 1.230738</td>\n",
+        "      <td> 201546283</td>\n",
+        "      <td>  4.8453</td>\n",
+        "      <td>  6.7713</td>\n",
+        "      <td> 171.515165</td>\n",
+        "      <td> 0.0481</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201549860</th>\n",
+        "      <td> 1.285956</td>\n",
+        "      <td> 201549860</td>\n",
+        "      <td>  4.1195</td>\n",
+        "      <td>  5.6083</td>\n",
+        "      <td> 170.103081</td>\n",
+        "      <td> 0.0283</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201555883</th>\n",
+        "      <td> 1.375947</td>\n",
+        "      <td> 201555883</td>\n",
+        "      <td>  5.3173</td>\n",
+        "      <td>  5.7966</td>\n",
+        "      <td> 176.075940</td>\n",
+        "      <td> 0.0604</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201565013</th>\n",
+        "      <td> 1.510249</td>\n",
+        "      <td> 201565013</td>\n",
+        "      <td>  3.4283</td>\n",
+        "      <td>  8.6381</td>\n",
+        "      <td> 176.992193</td>\n",
+        "      <td> 0.1538</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201569483</th>\n",
+        "      <td> 1.577513</td>\n",
+        "      <td> 201569483</td>\n",
+        "      <td>  5.3130</td>\n",
+        "      <td>  5.7969</td>\n",
+        "      <td> 167.171299</td>\n",
+        "      <td> 0.3587</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201577035</th>\n",
+        "      <td> 1.690636</td>\n",
+        "      <td> 201577035</td>\n",
+        "      <td> 11.5790</td>\n",
+        "      <td> 19.3062</td>\n",
+        "      <td> 172.121957</td>\n",
+        "      <td> 0.0380</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201596316</th>\n",
+        "      <td> 1.986840</td>\n",
+        "      <td> 201596316</td>\n",
+        "      <td> 21.8572</td>\n",
+        "      <td> 39.8415</td>\n",
+        "      <td> 169.042002</td>\n",
+        "      <td> 0.0267</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201613023</th>\n",
+        "      <td> 2.244884</td>\n",
+        "      <td> 201613023</td>\n",
+        "      <td>  7.3752</td>\n",
+        "      <td>  8.2818</td>\n",
+        "      <td> 173.192036</td>\n",
+        "      <td> 0.0205</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201617985</th>\n",
+        "      <td> 2.321476</td>\n",
+        "      <td> 201617985</td>\n",
+        "      <td>  4.6337</td>\n",
+        "      <td>  7.2823</td>\n",
+        "      <td> 179.491659</td>\n",
+        "      <td> 0.0333</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201629650</th>\n",
+        "      <td> 2.502696</td>\n",
+        "      <td> 201629650</td>\n",
+        "      <td>  4.5363</td>\n",
+        "      <td> 40.0492</td>\n",
+        "      <td> 170.155528</td>\n",
+        "      <td> 0.0241</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201635569</th>\n",
+        "      <td> 2.594245</td>\n",
+        "      <td> 201635569</td>\n",
+        "      <td>  3.4514</td>\n",
+        "      <td>  8.3681</td>\n",
+        "      <td> 178.057026</td>\n",
+        "      <td> 0.0991</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201649426</th>\n",
+        "      <td> 2.807619</td>\n",
+        "      <td> 201649426</td>\n",
+        "      <td> 13.3476</td>\n",
+        "      <td> 27.7704</td>\n",
+        "      <td> 177.234262</td>\n",
+        "      <td> 0.4365</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201702477</th>\n",
+        "      <td> 3.681584</td>\n",
+        "      <td> 201702477</td>\n",
+        "      <td>  3.5451</td>\n",
+        "      <td> 40.7365</td>\n",
+        "      <td> 175.240794</td>\n",
+        "      <td> 0.0808</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201736247</th>\n",
+        "      <td> 4.254747</td>\n",
+        "      <td> 201736247</td>\n",
+        "      <td>  3.8483</td>\n",
+        "      <td> 11.8106</td>\n",
+        "      <td> 178.110797</td>\n",
+        "      <td> 0.0347</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201754305</th>\n",
+        "      <td> 4.557340</td>\n",
+        "      <td> 201754305</td>\n",
+        "      <td>  1.4893</td>\n",
+        "      <td> 19.0726</td>\n",
+        "      <td> 175.097258</td>\n",
+        "      <td> 0.0297</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201754305</th>\n",
+        "      <td> 4.557340</td>\n",
+        "      <td> 201754305</td>\n",
+        "      <td>  3.6813</td>\n",
+        "      <td>  7.6202</td>\n",
+        "      <td> 175.097258</td>\n",
+        "      <td> 0.0281</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201779067</th>\n",
+        "      <td> 4.988131</td>\n",
+        "      <td> 201779067</td>\n",
+        "      <td> 12.2599</td>\n",
+        "      <td> 27.2429</td>\n",
+        "      <td> 168.542699</td>\n",
+        "      <td> 0.2535</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201828749</th>\n",
+        "      <td> 5.894323</td>\n",
+        "      <td> 201828749</td>\n",
+        "      <td>  5.1554</td>\n",
+        "      <td> 33.5093</td>\n",
+        "      <td> 175.654342</td>\n",
+        "      <td> 0.0267</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201855371</th>\n",
+        "      <td> 6.412261</td>\n",
+        "      <td> 201855371</td>\n",
+        "      <td>  9.9412</td>\n",
+        "      <td> 17.9715</td>\n",
+        "      <td> 178.329775</td>\n",
+        "      <td> 0.0311</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201912552</th>\n",
+        "      <td> 7.588391</td>\n",
+        "      <td> 201912552</td>\n",
+        "      <td> 28.1834</td>\n",
+        "      <td> 32.9410</td>\n",
+        "      <td> 172.560460</td>\n",
+        "      <td> 0.0513</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>201929294</th>\n",
+        "      <td> 7.959611</td>\n",
+        "      <td> 201929294</td>\n",
+        "      <td>  4.5703</td>\n",
+        "      <td>  5.0084</td>\n",
+        "      <td> 174.656969</td>\n",
+        "      <td> 0.1163</td>\n",
+        "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 14,
        "text": [
         "                dec    epic_id    epoch   period          ra    rprs\n",
         "epic_id                                                             \n",
@@ -122,11 +401,42 @@
         "201257461 -3.094936  201257461  20.3735  50.2677  178.161109  0.0334\n",
         "201295312 -2.520881  201295312   3.7228   5.6562  174.011630  0.0175\n",
         "201338508 -1.877976  201338508   6.5967  10.9328  169.303502  0.0339\n",
-        "201338508 -1.877976  201338508   0.8626   5.7350  169.303502  0.0331"
+        "201338508 -1.877976  201338508   0.8626   5.7350  169.303502  0.0331\n",
+        "201367065 -1.454787  201367065   5.4186  10.0542  172.334949  0.0354\n",
+        "201367065 -1.454787  201367065   4.2769  24.6470  172.334949  0.0272\n",
+        "201384232 -1.198477  201384232  19.5035  30.9375  178.192260  0.0260\n",
+        "201393098 -1.065755  201393098  16.6212  28.6793  167.093771  0.0231\n",
+        "201403446 -0.907261  201403446   7.3437  19.1535  174.266344  0.0154\n",
+        "201445392 -0.284375  201445392   5.6110  10.3527  169.793665  0.0349\n",
+        "201445392 -0.284375  201445392   5.0690   5.0644  169.793665  0.0274\n",
+        "201465501  0.005301  201465501  14.6719  18.4488  176.264468  0.0531\n",
+        "201505350  0.603575  201505350   9.2764  11.9069  174.960319  0.0446\n",
+        "201505350  0.603575  201505350   5.3840   7.9193  174.960319  0.0747\n",
+        "201546283  1.230738  201546283   4.8453   6.7713  171.515165  0.0481\n",
+        "201549860  1.285956  201549860   4.1195   5.6083  170.103081  0.0283\n",
+        "201555883  1.375947  201555883   5.3173   5.7966  176.075940  0.0604\n",
+        "201565013  1.510249  201565013   3.4283   8.6381  176.992193  0.1538\n",
+        "201569483  1.577513  201569483   5.3130   5.7969  167.171299  0.3587\n",
+        "201577035  1.690636  201577035  11.5790  19.3062  172.121957  0.0380\n",
+        "201596316  1.986840  201596316  21.8572  39.8415  169.042002  0.0267\n",
+        "201613023  2.244884  201613023   7.3752   8.2818  173.192036  0.0205\n",
+        "201617985  2.321476  201617985   4.6337   7.2823  179.491659  0.0333\n",
+        "201629650  2.502696  201629650   4.5363  40.0492  170.155528  0.0241\n",
+        "201635569  2.594245  201635569   3.4514   8.3681  178.057026  0.0991\n",
+        "201649426  2.807619  201649426  13.3476  27.7704  177.234262  0.4365\n",
+        "201702477  3.681584  201702477   3.5451  40.7365  175.240794  0.0808\n",
+        "201736247  4.254747  201736247   3.8483  11.8106  178.110797  0.0347\n",
+        "201754305  4.557340  201754305   1.4893  19.0726  175.097258  0.0297\n",
+        "201754305  4.557340  201754305   3.6813   7.6202  175.097258  0.0281\n",
+        "201779067  4.988131  201779067  12.2599  27.2429  168.542699  0.2535\n",
+        "201828749  5.894323  201828749   5.1554  33.5093  175.654342  0.0267\n",
+        "201855371  6.412261  201855371   9.9412  17.9715  178.329775  0.0311\n",
+        "201912552  7.588391  201912552  28.1834  32.9410  172.560460  0.0513\n",
+        "201929294  7.959611  201929294   4.5703   5.0084  174.656969  0.1163"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
