formatting in table

--- a/planet_properties.ipynb
+++ b/planet_properties.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3804158cec2399141ed7176bd3e784010167df5f296afb85515858ca17a06bf6"
+  "signature": "sha256:42356963ca0b9e1ca94f80a685fdf275a6afbd08e7a07d50ad3a14d79bbba0bb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -360,7 +360,7 @@
       "\\enddata\n",
       "\\tablecomments{blurgh.}\n",
       "\\end{deluxetable*}\n",
-      "\"\"\".replace(\"DATADATA\", \"\\\\\\n\".join([r for _ in rows for r in _]))"
+      "\"\"\".replace(\"DATADATA\", \"\\\\\\n\".join([\"$\" + r.replace(\" & \", \"$ & $\")[:-1] + \" for _ in rows for r in _]))"
      ],
      "language": "python",
      "metadata": {},
